src/frontend/syntactic-analysis/bison-parser.output
Terminals unused in grammar

    OR
    AND
    QUOTE


State 3 conflicts: 15 shift/reduce
State 21 conflicts: 15 shift/reduce, 1 reduce/reduce
State 54 conflicts: 1 shift/reduce
State 69 conflicts: 14 reduce/reduce
State 70 conflicts: 10 shift/reduce
State 85 conflicts: 2 reduce/reduce
State 131 conflicts: 15 shift/reduce
State 132 conflicts: 15 shift/reduce
State 158 conflicts: 15 shift/reduce
State 160 conflicts: 15 shift/reduce
State 161 conflicts: 15 shift/reduce
State 163 conflicts: 15 shift/reduce


Grammar

    0 $accept: mainProgram $end

    1 mainProgram: MAIN OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

    2 block: instruction block
    3      | instruction

    4 instruction: statements semiColons
    5            | control_block
    6            | %empty

    7 statements: declareAndAssign
    8           | assignation
    9           | function

   10 declareAndAssign: declare ASSIGN expression
   11                 | declare ASSIGN function
   12                 | declare ASSIGN OPEN_CURL_BRACKETS parameterList CLOSE_CURL_BRACKETS
   13                 | declare

   14 declare: type SYMBOL
   15        | treeType type SYMBOL
   16        | type vector

   17 assignation: SYMBOL ASSIGN expression
   18            | SYMBOL ASSIGN function

   19 function: SYMBOL POINT noParamFunctions OPEN_PARENTHESIS CLOSE_PARENTHESIS
   20         | SYMBOL POINT oneParamFunctions OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   21         | SYMBOL POINT multiParamFunctions OPEN_PARENTHESIS parameterList CLOSE_PARENTHESIS
   22         | SYMBOL POINT FILTER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   23         | read
   24         | write

   25 read: READ OPEN_PARENTHESIS SYMBOL CLOSE_PARENTHESIS

   26 write: WRITE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   27      | WRITE OPEN_PARENTHESIS STRING CLOSE_PARENTHESIS

   28 noParamFunctions: PRINT
   29                 | LENGTH
   30                 | BALANCED
   31                 | SIZE

   32 oneParamFunctions: DELETE_NODE
   33                  | MODIFY_NODE
   34                  | SEARCH

   35 multiParamFunctions: NEW_NODE

   36 control_block: if
   37              | for
   38              | while

   39 if: IF OPEN_PARENTHESIS expression CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block if_close

   40 if_close: CLOSE_CURL_BRACKETS
   41         | CLOSE_CURL_BRACKETS ELSE OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

   42 while: WHILE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

   43 for: FOR OPEN_PARENTHESIS declareAndAssign semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS
   44    | FOR OPEN_PARENTHESIS assignation semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS
   45    | FOR OPEN_PARENTHESIS semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

   46 expression: expression ADD expression
   47           | expression SUB expression
   48           | expression MUL expression
   49           | expression DIV expression
   50           | expression GT expression
   51           | expression GE expression
   52           | expression LE expression
   53           | expression LT expression
   54           | expression NE expression
   55           | expression EQ expression
   56           | NOT expression
   57           | factor
   58           | function
   59           | assignation
   60           | vector

   61 factor: OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   62       | constant
   63       | STRING
   64       | SYMBOL

   65 constant: INTEGER

   66 vector: SYMBOL OPEN_SQUARE_BRACKETS constant CLOSE_SQUARE_BRACKETS
   67       | SYMBOL OPEN_SQUARE_BRACKETS SYMBOL CLOSE_SQUARE_BRACKETS

   68 parameterList: expression
   69              | parameterList COMMA expression

   70 type: INT_TYPE
   71     | STRING_TYPE

   72 treeType: NON_BINARY_TREE_TYPE
   73         | BINARY_TREE_TYPE
   74         | AVL_TREE_TYPE
   75         | RED_BLACK_TREE_TYPE
   76         | B_TREE_TYPE
   77         | BST_TREE_TYPE
   78         | NODE_TYPE

   79 semiColons: END_LINE
   80           | semiColons END_LINE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ADD (258) 46
    SUB (259) 47
    MUL (260) 48
    DIV (261) 49
    EQ (262) 55
    LE (263) 52
    GE (264) 51
    NE (265) 54
    LT (266) 53
    GT (267) 50
    OR (268)
    AND (269)
    NOT (270) 56
    ASSIGN (271) 10 11 12 17 18
    POINT (272) 19 20 21 22
    COMMA (273) 69
    INT_TYPE (274) 70
    STRING_TYPE (275) 71
    NON_BINARY_TREE_TYPE (276) 72
    BINARY_TREE_TYPE (277) 73
    AVL_TREE_TYPE (278) 74
    RED_BLACK_TREE_TYPE (279) 75
    B_TREE_TYPE (280) 76
    BST_TREE_TYPE (281) 77
    NODE_TYPE (282) 78
    MAIN (283) 1
    PRINT (284) 28
    READ (285) 25
    WRITE (286) 26 27
    NEW_NODE (287) 35
    DELETE_NODE (288) 32
    BALANCED (289) 30
    LENGTH (290) 29
    SIZE (291) 31
    MODIFY_NODE (292) 33
    SEARCH (293) 34
    FILTER (294) 22
    FOR (295) 43 44 45
    WHILE (296) 42
    IF (297) 39
    ELSE (298) 41
    OPEN_PARENTHESIS (299) 19 20 21 22 25 26 27 39 42 43 44 45 61
    CLOSE_PARENTHESIS (300) 19 20 21 22 25 26 27 39 42 43 44 45 61
    OPEN_CURL_BRACKETS (301) 1 12 39 41 42 43 44 45
    CLOSE_CURL_BRACKETS (302) 1 12 40 41 42 43 44 45
    OPEN_SQUARE_BRACKETS (303) 66 67
    CLOSE_SQUARE_BRACKETS (304) 66 67
    QUOTE (305)
    END_LINE (306) 79 80
    INTEGER (307) 65
    STRING (308) 27 63
    SYMBOL (309) 14 15 17 18 19 20 21 22 25 64 66 67


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    mainProgram (56)
        on left: 1
        on right: 0
    block (57)
        on left: 2 3
        on right: 1 2 39 41 42 43 44 45
    instruction (58)
        on left: 4 5 6
        on right: 2 3
    statements (59)
        on left: 7 8 9
        on right: 4 43 44 45
    declareAndAssign (60)
        on left: 10 11 12 13
        on right: 7 43
    declare (61)
        on left: 14 15 16
        on right: 10 11 12 13
    assignation (62)
        on left: 17 18
        on right: 8 44 59
    function (63)
        on left: 19 20 21 22 23 24
        on right: 9 11 18 58
    read (64)
        on left: 25
        on right: 23
    write (65)
        on left: 26 27
        on right: 24
    noParamFunctions (66)
        on left: 28 29 30 31
        on right: 19
    oneParamFunctions (67)
        on left: 32 33 34
        on right: 20
    multiParamFunctions (68)
        on left: 35
        on right: 21
    control_block (69)
        on left: 36 37 38
        on right: 5
    if (70)
        on left: 39
        on right: 36
    if_close (71)
        on left: 40 41
        on right: 39
    while (72)
        on left: 42
        on right: 38
    for (73)
        on left: 43 44 45
        on right: 37
    expression (74)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 10 17 20 22 26 39 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 61 68 69
    factor (75)
        on left: 61 62 63 64
        on right: 57
    constant (76)
        on left: 65
        on right: 62 66
    vector (77)
        on left: 66 67
        on right: 16 60
    parameterList (78)
        on left: 68 69
        on right: 12 21 69
    type (79)
        on left: 70 71
        on right: 14 15 16
    treeType (80)
        on left: 72 73 74 75 76 77 78
        on right: 15
    semiColons (81)
        on left: 79 80
        on right: 4 43 44 45 80


State 0

    0 $accept: • mainProgram $end

    MAIN  shift, and go to state 1

    mainProgram  go to state 2


State 1

    1 mainProgram: MAIN • OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

    OPEN_CURL_BRACKETS  shift, and go to state 3


State 2

    0 $accept: mainProgram • $end

    $end  shift, and go to state 4


State 3

    1 mainProgram: MAIN OPEN_CURL_BRACKETS • block CLOSE_CURL_BRACKETS

    INT_TYPE              shift, and go to state 5
    STRING_TYPE           shift, and go to state 6
    NON_BINARY_TREE_TYPE  shift, and go to state 7
    BINARY_TREE_TYPE      shift, and go to state 8
    AVL_TREE_TYPE         shift, and go to state 9
    RED_BLACK_TREE_TYPE   shift, and go to state 10
    B_TREE_TYPE           shift, and go to state 11
    BST_TREE_TYPE         shift, and go to state 12
    NODE_TYPE             shift, and go to state 13
    READ                  shift, and go to state 14
    WRITE                 shift, and go to state 15
    FOR                   shift, and go to state 16
    WHILE                 shift, and go to state 17
    IF                    shift, and go to state 18
    SYMBOL                shift, and go to state 19

    INT_TYPE              [reduce using rule 6 (instruction)]
    STRING_TYPE           [reduce using rule 6 (instruction)]
    NON_BINARY_TREE_TYPE  [reduce using rule 6 (instruction)]
    BINARY_TREE_TYPE      [reduce using rule 6 (instruction)]
    AVL_TREE_TYPE         [reduce using rule 6 (instruction)]
    RED_BLACK_TREE_TYPE   [reduce using rule 6 (instruction)]
    B_TREE_TYPE           [reduce using rule 6 (instruction)]
    BST_TREE_TYPE         [reduce using rule 6 (instruction)]
    NODE_TYPE             [reduce using rule 6 (instruction)]
    READ                  [reduce using rule 6 (instruction)]
    WRITE                 [reduce using rule 6 (instruction)]
    FOR                   [reduce using rule 6 (instruction)]
    WHILE                 [reduce using rule 6 (instruction)]
    IF                    [reduce using rule 6 (instruction)]
    SYMBOL                [reduce using rule 6 (instruction)]
    $default              reduce using rule 6 (instruction)

    block             go to state 20
    instruction       go to state 21
    statements        go to state 22
    declareAndAssign  go to state 23
    declare           go to state 24
    assignation       go to state 25
    function          go to state 26
    read              go to state 27
    write             go to state 28
    control_block     go to state 29
    if                go to state 30
    while             go to state 31
    for               go to state 32
    type              go to state 33
    treeType          go to state 34


State 4

    0 $accept: mainProgram $end •

    $default  accept


State 5

   70 type: INT_TYPE •

    $default  reduce using rule 70 (type)


State 6

   71 type: STRING_TYPE •

    $default  reduce using rule 71 (type)


State 7

   72 treeType: NON_BINARY_TREE_TYPE •

    $default  reduce using rule 72 (treeType)


State 8

   73 treeType: BINARY_TREE_TYPE •

    $default  reduce using rule 73 (treeType)


State 9

   74 treeType: AVL_TREE_TYPE •

    $default  reduce using rule 74 (treeType)


State 10

   75 treeType: RED_BLACK_TREE_TYPE •

    $default  reduce using rule 75 (treeType)


State 11

   76 treeType: B_TREE_TYPE •

    $default  reduce using rule 76 (treeType)


State 12

   77 treeType: BST_TREE_TYPE •

    $default  reduce using rule 77 (treeType)


State 13

   78 treeType: NODE_TYPE •

    $default  reduce using rule 78 (treeType)


State 14

   25 read: READ • OPEN_PARENTHESIS SYMBOL CLOSE_PARENTHESIS

    OPEN_PARENTHESIS  shift, and go to state 35


State 15

   26 write: WRITE • OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   27      | WRITE • OPEN_PARENTHESIS STRING CLOSE_PARENTHESIS

    OPEN_PARENTHESIS  shift, and go to state 36


State 16

   43 for: FOR • OPEN_PARENTHESIS declareAndAssign semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS
   44    | FOR • OPEN_PARENTHESIS assignation semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS
   45    | FOR • OPEN_PARENTHESIS semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

    OPEN_PARENTHESIS  shift, and go to state 37


State 17

   42 while: WHILE • OPEN_PARENTHESIS expression CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

    OPEN_PARENTHESIS  shift, and go to state 38


State 18

   39 if: IF • OPEN_PARENTHESIS expression CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block if_close

    OPEN_PARENTHESIS  shift, and go to state 39


State 19

   17 assignation: SYMBOL • ASSIGN expression
   18            | SYMBOL • ASSIGN function
   19 function: SYMBOL • POINT noParamFunctions OPEN_PARENTHESIS CLOSE_PARENTHESIS
   20         | SYMBOL • POINT oneParamFunctions OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   21         | SYMBOL • POINT multiParamFunctions OPEN_PARENTHESIS parameterList CLOSE_PARENTHESIS
   22         | SYMBOL • POINT FILTER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS

    ASSIGN  shift, and go to state 40
    POINT   shift, and go to state 41


State 20

    1 mainProgram: MAIN OPEN_CURL_BRACKETS block • CLOSE_CURL_BRACKETS

    CLOSE_CURL_BRACKETS  shift, and go to state 42


State 21

    2 block: instruction • block
    3      | instruction •

    INT_TYPE              shift, and go to state 5
    STRING_TYPE           shift, and go to state 6
    NON_BINARY_TREE_TYPE  shift, and go to state 7
    BINARY_TREE_TYPE      shift, and go to state 8
    AVL_TREE_TYPE         shift, and go to state 9
    RED_BLACK_TREE_TYPE   shift, and go to state 10
    B_TREE_TYPE           shift, and go to state 11
    BST_TREE_TYPE         shift, and go to state 12
    NODE_TYPE             shift, and go to state 13
    READ                  shift, and go to state 14
    WRITE                 shift, and go to state 15
    FOR                   shift, and go to state 16
    WHILE                 shift, and go to state 17
    IF                    shift, and go to state 18
    SYMBOL                shift, and go to state 19

    INT_TYPE              [reduce using rule 6 (instruction)]
    STRING_TYPE           [reduce using rule 6 (instruction)]
    NON_BINARY_TREE_TYPE  [reduce using rule 6 (instruction)]
    BINARY_TREE_TYPE      [reduce using rule 6 (instruction)]
    AVL_TREE_TYPE         [reduce using rule 6 (instruction)]
    RED_BLACK_TREE_TYPE   [reduce using rule 6 (instruction)]
    B_TREE_TYPE           [reduce using rule 6 (instruction)]
    BST_TREE_TYPE         [reduce using rule 6 (instruction)]
    NODE_TYPE             [reduce using rule 6 (instruction)]
    READ                  [reduce using rule 6 (instruction)]
    WRITE                 [reduce using rule 6 (instruction)]
    FOR                   [reduce using rule 6 (instruction)]
    WHILE                 [reduce using rule 6 (instruction)]
    IF                    [reduce using rule 6 (instruction)]
    CLOSE_CURL_BRACKETS   reduce using rule 3 (block)
    CLOSE_CURL_BRACKETS   [reduce using rule 6 (instruction)]
    SYMBOL                [reduce using rule 6 (instruction)]
    $default              reduce using rule 3 (block)

    block             go to state 43
    instruction       go to state 21
    statements        go to state 22
    declareAndAssign  go to state 23
    declare           go to state 24
    assignation       go to state 25
    function          go to state 26
    read              go to state 27
    write             go to state 28
    control_block     go to state 29
    if                go to state 30
    while             go to state 31
    for               go to state 32
    type              go to state 33
    treeType          go to state 34


State 22

    4 instruction: statements • semiColons

    END_LINE  shift, and go to state 44

    semiColons  go to state 45


State 23

    7 statements: declareAndAssign •

    $default  reduce using rule 7 (statements)


State 24

   10 declareAndAssign: declare • ASSIGN expression
   11                 | declare • ASSIGN function
   12                 | declare • ASSIGN OPEN_CURL_BRACKETS parameterList CLOSE_CURL_BRACKETS
   13                 | declare •

    ASSIGN  shift, and go to state 46

    $default  reduce using rule 13 (declareAndAssign)


State 25

    8 statements: assignation •

    $default  reduce using rule 8 (statements)


State 26

    9 statements: function •

    $default  reduce using rule 9 (statements)


State 27

   23 function: read •

    $default  reduce using rule 23 (function)


State 28

   24 function: write •

    $default  reduce using rule 24 (function)


State 29

    5 instruction: control_block •

    $default  reduce using rule 5 (instruction)


State 30

   36 control_block: if •

    $default  reduce using rule 36 (control_block)


State 31

   38 control_block: while •

    $default  reduce using rule 38 (control_block)


State 32

   37 control_block: for •

    $default  reduce using rule 37 (control_block)


State 33

   14 declare: type • SYMBOL
   16        | type • vector

    SYMBOL  shift, and go to state 47

    vector  go to state 48


State 34

   15 declare: treeType • type SYMBOL

    INT_TYPE     shift, and go to state 5
    STRING_TYPE  shift, and go to state 6

    type  go to state 49


State 35

   25 read: READ OPEN_PARENTHESIS • SYMBOL CLOSE_PARENTHESIS

    SYMBOL  shift, and go to state 50


State 36

   26 write: WRITE OPEN_PARENTHESIS • expression CLOSE_PARENTHESIS
   27      | WRITE OPEN_PARENTHESIS • STRING CLOSE_PARENTHESIS

    NOT               shift, and go to state 51
    READ              shift, and go to state 14
    WRITE             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 52
    INTEGER           shift, and go to state 53
    STRING            shift, and go to state 54
    SYMBOL            shift, and go to state 55

    assignation  go to state 56
    function     go to state 57
    read         go to state 27
    write        go to state 28
    expression   go to state 58
    factor       go to state 59
    constant     go to state 60
    vector       go to state 61


State 37

   43 for: FOR OPEN_PARENTHESIS • declareAndAssign semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS
   44    | FOR OPEN_PARENTHESIS • assignation semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS
   45    | FOR OPEN_PARENTHESIS • semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

    INT_TYPE              shift, and go to state 5
    STRING_TYPE           shift, and go to state 6
    NON_BINARY_TREE_TYPE  shift, and go to state 7
    BINARY_TREE_TYPE      shift, and go to state 8
    AVL_TREE_TYPE         shift, and go to state 9
    RED_BLACK_TREE_TYPE   shift, and go to state 10
    B_TREE_TYPE           shift, and go to state 11
    BST_TREE_TYPE         shift, and go to state 12
    NODE_TYPE             shift, and go to state 13
    END_LINE              shift, and go to state 44
    SYMBOL                shift, and go to state 62

    declareAndAssign  go to state 63
    declare           go to state 24
    assignation       go to state 64
    type              go to state 33
    treeType          go to state 34
    semiColons        go to state 65


State 38

   42 while: WHILE OPEN_PARENTHESIS • expression CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

    NOT               shift, and go to state 51
    READ              shift, and go to state 14
    WRITE             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 52
    INTEGER           shift, and go to state 53
    STRING            shift, and go to state 66
    SYMBOL            shift, and go to state 55

    assignation  go to state 56
    function     go to state 57
    read         go to state 27
    write        go to state 28
    expression   go to state 67
    factor       go to state 59
    constant     go to state 60
    vector       go to state 61


State 39

   39 if: IF OPEN_PARENTHESIS • expression CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block if_close

    NOT               shift, and go to state 51
    READ              shift, and go to state 14
    WRITE             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 52
    INTEGER           shift, and go to state 53
    STRING            shift, and go to state 66
    SYMBOL            shift, and go to state 55

    assignation  go to state 56
    function     go to state 57
    read         go to state 27
    write        go to state 28
    expression   go to state 68
    factor       go to state 59
    constant     go to state 60
    vector       go to state 61


State 40

   17 assignation: SYMBOL ASSIGN • expression
   18            | SYMBOL ASSIGN • function

    NOT               shift, and go to state 51
    READ              shift, and go to state 14
    WRITE             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 52
    INTEGER           shift, and go to state 53
    STRING            shift, and go to state 66
    SYMBOL            shift, and go to state 55

    assignation  go to state 56
    function     go to state 69
    read         go to state 27
    write        go to state 28
    expression   go to state 70
    factor       go to state 59
    constant     go to state 60
    vector       go to state 61


State 41

   19 function: SYMBOL POINT • noParamFunctions OPEN_PARENTHESIS CLOSE_PARENTHESIS
   20         | SYMBOL POINT • oneParamFunctions OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   21         | SYMBOL POINT • multiParamFunctions OPEN_PARENTHESIS parameterList CLOSE_PARENTHESIS
   22         | SYMBOL POINT • FILTER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS

    PRINT        shift, and go to state 71
    NEW_NODE     shift, and go to state 72
    DELETE_NODE  shift, and go to state 73
    BALANCED     shift, and go to state 74
    LENGTH       shift, and go to state 75
    SIZE         shift, and go to state 76
    MODIFY_NODE  shift, and go to state 77
    SEARCH       shift, and go to state 78
    FILTER       shift, and go to state 79

    noParamFunctions     go to state 80
    oneParamFunctions    go to state 81
    multiParamFunctions  go to state 82


State 42

    1 mainProgram: MAIN OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS •

    $default  reduce using rule 1 (mainProgram)


State 43

    2 block: instruction block •

    $default  reduce using rule 2 (block)


State 44

   79 semiColons: END_LINE •

    $default  reduce using rule 79 (semiColons)


State 45

    4 instruction: statements semiColons •
   80 semiColons: semiColons • END_LINE

    END_LINE  shift, and go to state 83

    $default  reduce using rule 4 (instruction)


State 46

   10 declareAndAssign: declare ASSIGN • expression
   11                 | declare ASSIGN • function
   12                 | declare ASSIGN • OPEN_CURL_BRACKETS parameterList CLOSE_CURL_BRACKETS

    NOT                 shift, and go to state 51
    READ                shift, and go to state 14
    WRITE               shift, and go to state 15
    OPEN_PARENTHESIS    shift, and go to state 52
    OPEN_CURL_BRACKETS  shift, and go to state 84
    INTEGER             shift, and go to state 53
    STRING              shift, and go to state 66
    SYMBOL              shift, and go to state 55

    assignation  go to state 56
    function     go to state 85
    read         go to state 27
    write        go to state 28
    expression   go to state 86
    factor       go to state 59
    constant     go to state 60
    vector       go to state 61


State 47

   14 declare: type SYMBOL •
   66 vector: SYMBOL • OPEN_SQUARE_BRACKETS constant CLOSE_SQUARE_BRACKETS
   67       | SYMBOL • OPEN_SQUARE_BRACKETS SYMBOL CLOSE_SQUARE_BRACKETS

    OPEN_SQUARE_BRACKETS  shift, and go to state 87

    $default  reduce using rule 14 (declare)


State 48

   16 declare: type vector •

    $default  reduce using rule 16 (declare)


State 49

   15 declare: treeType type • SYMBOL

    SYMBOL  shift, and go to state 88


State 50

   25 read: READ OPEN_PARENTHESIS SYMBOL • CLOSE_PARENTHESIS

    CLOSE_PARENTHESIS  shift, and go to state 89


State 51

   56 expression: NOT • expression

    NOT               shift, and go to state 51
    READ              shift, and go to state 14
    WRITE             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 52
    INTEGER           shift, and go to state 53
    STRING            shift, and go to state 66
    SYMBOL            shift, and go to state 55

    assignation  go to state 56
    function     go to state 57
    read         go to state 27
    write        go to state 28
    expression   go to state 90
    factor       go to state 59
    constant     go to state 60
    vector       go to state 61


State 52

   61 factor: OPEN_PARENTHESIS • expression CLOSE_PARENTHESIS

    NOT               shift, and go to state 51
    READ              shift, and go to state 14
    WRITE             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 52
    INTEGER           shift, and go to state 53
    STRING            shift, and go to state 66
    SYMBOL            shift, and go to state 55

    assignation  go to state 56
    function     go to state 57
    read         go to state 27
    write        go to state 28
    expression   go to state 91
    factor       go to state 59
    constant     go to state 60
    vector       go to state 61


State 53

   65 constant: INTEGER •

    $default  reduce using rule 65 (constant)


State 54

   27 write: WRITE OPEN_PARENTHESIS STRING • CLOSE_PARENTHESIS
   63 factor: STRING •

    CLOSE_PARENTHESIS  shift, and go to state 92

    CLOSE_PARENTHESIS  [reduce using rule 63 (factor)]
    $default           reduce using rule 63 (factor)


State 55

   17 assignation: SYMBOL • ASSIGN expression
   18            | SYMBOL • ASSIGN function
   19 function: SYMBOL • POINT noParamFunctions OPEN_PARENTHESIS CLOSE_PARENTHESIS
   20         | SYMBOL • POINT oneParamFunctions OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   21         | SYMBOL • POINT multiParamFunctions OPEN_PARENTHESIS parameterList CLOSE_PARENTHESIS
   22         | SYMBOL • POINT FILTER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
   64 factor: SYMBOL •
   66 vector: SYMBOL • OPEN_SQUARE_BRACKETS constant CLOSE_SQUARE_BRACKETS
   67       | SYMBOL • OPEN_SQUARE_BRACKETS SYMBOL CLOSE_SQUARE_BRACKETS

    ASSIGN                shift, and go to state 40
    POINT                 shift, and go to state 41
    OPEN_SQUARE_BRACKETS  shift, and go to state 87

    $default  reduce using rule 64 (factor)


State 56

   59 expression: assignation •

    $default  reduce using rule 59 (expression)


State 57

   58 expression: function •

    $default  reduce using rule 58 (expression)


State 58

   26 write: WRITE OPEN_PARENTHESIS expression • CLOSE_PARENTHESIS
   46 expression: expression • ADD expression
   47           | expression • SUB expression
   48           | expression • MUL expression
   49           | expression • DIV expression
   50           | expression • GT expression
   51           | expression • GE expression
   52           | expression • LE expression
   53           | expression • LT expression
   54           | expression • NE expression
   55           | expression • EQ expression

    ADD                shift, and go to state 93
    SUB                shift, and go to state 94
    MUL                shift, and go to state 95
    DIV                shift, and go to state 96
    EQ                 shift, and go to state 97
    LE                 shift, and go to state 98
    GE                 shift, and go to state 99
    NE                 shift, and go to state 100
    LT                 shift, and go to state 101
    GT                 shift, and go to state 102
    CLOSE_PARENTHESIS  shift, and go to state 103


State 59

   57 expression: factor •

    $default  reduce using rule 57 (expression)


State 60

   62 factor: constant •

    $default  reduce using rule 62 (factor)


State 61

   60 expression: vector •

    $default  reduce using rule 60 (expression)


State 62

   17 assignation: SYMBOL • ASSIGN expression
   18            | SYMBOL • ASSIGN function

    ASSIGN  shift, and go to state 40


State 63

   43 for: FOR OPEN_PARENTHESIS declareAndAssign • semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

    END_LINE  shift, and go to state 44

    semiColons  go to state 104


State 64

   44 for: FOR OPEN_PARENTHESIS assignation • semiColons expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS

    END_LINE  shift, and go to state 44

    semiColons  go to state 105


State 65

   45 for: FOR OPEN_PARENTHESIS semiColons • expression semiColons statements CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS
   80 semiColons: semiColons • END_LINE

    NOT               shift, and go to state 51
    READ              shift, and go to state 14
    WRITE             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 52
    END_LINE          shift, and go to state 83
    INTEGER           shift, and go to state 53
    STRING            shift, and go to state 66
    SYMBOL            shift, and go to state 55

    assignation  go to state 56
    function     go to state 57
    read         go to state 27
    write        go to state 28
    expression   go to state 106
    factor       go to state 59
    constant     go to state 60
    vector       go to state 61


State 66

   63 factor: STRING •

    $default  reduce using rule 63 (factor)


State 67

   42 while: WHILE OPEN_PARENTHESIS expression • CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block CLOSE_CURL_BRACKETS
   46 expression: expression • ADD expression
   47           | expression • SUB expression
   48           | expression • MUL expression
   49           | expression • DIV expression
   50           | expression • GT expression
   51           | expression • GE expression
   52           | expression • LE expression
   53           | expression • LT expression
   54           | expression • NE expression
   55           | expression • EQ expression

    ADD                shift, and go to state 93
    SUB                shift, and go to state 94
    MUL                shift, and go to state 95
    DIV                shift, and go to state 96
    EQ                 shift, and go to state 97
    LE                 shift, and go to state 98
    GE                 shift, and go to state 99
    NE                 shift, and go to state 100
    LT                 shift, and go to state 101
    GT                 shift, and go to state 102
    CLOSE_PARENTHESIS  shift, and go to state 107


State 68

   39 if: IF OPEN_PARENTHESIS expression • CLOSE_PARENTHESIS OPEN_CURL_BRACKETS block if_close
   46 expression: expression • ADD expression
   47           | expression • SUB expression
   48           | expression • MUL expression
   49           | expression • DIV expression
   50           | expression • GT expression
   51           | expression • GE expression
   52           | expression • LE expression
   53           | expression • LT expression
   54           | expression • NE expression
   55           | expression • EQ expression

    ADD                shift, and go to state 93
    SUB                shift, and go to state 94
    MUL                shift, and go to state 95
    DIV                shift, and go to state 96
    EQ                 shift, and go to state 97
    LE                 shift, and go to state 98
    GE                 shift, and go to state 99
    NE                 shift, and go to state 100
    LT                 shift, and go to state 101
    GT                 shift, and go to state 102
    CLOSE_PARENTHESIS  shift, and go to state 108


State 69

   18 assignation: SYMBOL ASSIGN function •
   58 expression: function •

    ADD                  reduce using rule 18 (assignation)
    ADD                  [reduce using rule 58 (expression)]
    SUB                  reduce using rule 18 (assignation)
    SUB                  [reduce using rule 58 (expression)]
    MUL                  reduce using rule 18 (assignation)
    MUL                  [reduce using rule 58 (expression)]
    DIV                  reduce using rule 18 (assignation)
    DIV                  [reduce using rule 58 (expression)]
    EQ                   reduce using rule 18 (assignation)
    EQ                   [reduce using rule 58 (expression)]
    LE                   reduce using rule 18 (assignation)
    LE                   [reduce using rule 58 (expression)]
    GE                   reduce using rule 18 (assignation)
    GE                   [reduce using rule 58 (expression)]
    NE                   reduce using rule 18 (assignation)
    NE                   [reduce using rule 58 (expression)]
    LT                   reduce using rule 18 (assignation)
    LT                   [reduce using rule 58 (expression)]
    GT                   reduce using rule 18 (assignation)
    GT                   [reduce using rule 58 (expression)]
    COMMA                reduce using rule 18 (assignation)
    COMMA                [reduce using rule 58 (expression)]
    CLOSE_PARENTHESIS    reduce using rule 18 (assignation)
    CLOSE_PARENTHESIS    [reduce using rule 58 (expression)]
    CLOSE_CURL_BRACKETS  reduce using rule 18 (assignation)
    CLOSE_CURL_BRACKETS  [reduce using rule 58 (expression)]
    END_LINE             reduce using rule 18 (assignation)
    END_LINE             [reduce using rule 58 (expression)]
    $default             reduce using rule 18 (assignation)


State 70

   17 assignation: SYMBOL ASSIGN expression •
   46 expression: expression • ADD expression
   47           | expression • SUB expression
   48           | expression • MUL expression
   49           | expression • DIV expression
   50           | expression • GT expression
   51           | expression • GE expression
   52           | expression • LE expression
   53           | expression • LT expression
   54           | expression • NE expression
   55           | expression • EQ expression
